# smart-media-key

./: Cargo.toml  README.md  build.rs
.github/workflows/: build.yml
resources/: tray.rc
src/: main.rs
src/config/: settings.rs
src/keyboard/: mod.rs  provider.rs  wooting.rs
src/tap/: detector.rs  mod.rs  sequence.rs  state.rs  types.rs
