[package]
name = "smart-media-key"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
enigo = { version = "0.3.0", features = ["serde"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0.0"

[features]
wooting = ["wooting-analog-wrapper"]

[dependencies.wooting-analog-wrapper]
git = "https://github.com/WootingKb/wooting-analog-sdk"
features = ["serdes"]
optional = true

[target."cfg(windows)".dependencies]
tray-item = { version = "0.10" }

[target."cfg(unix)".dependencies]
tray-item = { version = "0.10", features = ["ksni"] }

[target."cfg(windows)".build-dependencies]
embed-resource = "3.0.1"